# template_commercial_area_analyzer_app

./: .env.example  .gitignore  pyproject.toml
src/: main.py
src/clients/: __init__.py  crewai.py  s3.py
src/models/: __init__.py  execution.py  s3_file.py
src/services/: executions.py
src/utils/: __init__.py  download_link.py  relative_time.py  render_badge.py  render_table.py
