[project]
name = "template-commercial-area-analyzer-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.8",
    "boto3>=1.38.28",
    "humanize>=4.12.3",
    "pydantic>=2.11.5",
    "streamlit>=1.45.1",
]
